<resources>
    <string name="app_name">Radio Edu</string>

    <string name="cont_desc_logo">Logo App</string>
    <string name="cont_desc_show_passw">Botón mostrar/ocultar contraseña</string>
    <string name="cont_desc_user">Imagen usuario</string>
    <string name="cont_desc_radio">Imagen radio</string>
    <string name="cont_desc_podcast">Imagen podcast</string>
    <string name="cont_desc_like">Imagen favorito</string>
    <string name="cont_desc_backbutton">Botón atrás</string>
    <string name="cont_desc_add_comment">Botón añadir comentario</string>
    <string name="cont_desc_btn_play">Botón reproducir audio</string>
    <string name="cont_desc_btn_pause">Botón parar audio</string>
    <string name="cont_desc_btn_stop">Botón detener audio</string>
    <string name="cont_desc_btn_rew">Botón retroceder audio</string>
    <string name="cont_desc_btn_for">Botón avanzar audio</string>
    <string name="cont_desc_btn_edit">Botón editar comentario</string>
    <string name="cont_desc_btn_delete">Botón borrar comentario</string>
    <string name="cont_desc_close">Botón cerrar</string>

    <string name="hint_handle">Nombre de usuario o email</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname">Apellidos</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_current_password">Contraseña actual</string>
    <string name="hint_new_password">Nueva contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="hint_code">Código</string>

    <string name="hint_write_comment">Escribe un comentario…</string>

    <string name="cb_student">Soy estudiante</string>
    <string name="cb_fav">Favoritos</string>

    <string name="tv_province">Provincia</string>
    <string name="tv_city">Localidad</string>
    <string name="tv_centre">Centro</string>
    <string name="tv_radio">Radio</string>
    <string name="tv_podcast">Podcast</string>
    <string name="tv_date">Fecha</string>
    <string name="tv_title">Título</string>
    <string name="tv_body">Cuerpo</string>
    <string name="tv_user">Usuario</string>
    <string name="tv_comment">Comentario</string>
    <string name="tv_signup_page">Si aún no tienes cuenta, regístrate <b><u>aquí</u></b></string>
    <string name="tv_login_page">Si ya dispones de cuenta, inicia sesión <b><u>aquí</u></b></string>
    <string name="tv_forgot_passw">¡He olvidado mi contraseña!</string>
    <string name="tv_write_email">Escribe la dirección de correo electrónico asociada a tu cuenta:</string>
    <string name="tv_write_code">Escribe el código de verificación enviado a</string>
    <string name="tv_write_new_passw">Escribe la nueva contraseña:</string>
    <string name="tv_touch_picture">Pulsa sobre tu foto de perfil para cambiarla por una imagen de tu galería</string>
    <string name="tv_change_email">Si cambias tu correo no podrás acceder a tu cuenta hasta que vuelvas a confirmarlo</string>
    <string name="tv_inicial_time">00:00:00</string>

    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_signup">Registrar</string>
    <string name="btn_back">Volver</string>
    <string name="btn_req_code">Solicitar código</string>
    <string name="btn_val_code">Validar código</string>
    <string name="btn_change_passw">Cambiar contraseña</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_unsub_all">Cancelar suscripciones</string>
    <string name="btn_update_data">Modificar datos</string>
    <string name="btn_update_email">Modificar correo</string>
    <string name="btn_update_password">Modificar contraseña</string>
    <string name="btn_delete_account">Borrar cuenta</string>

    <string name="sw_sub">Suscribirse</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="admin">admin</string>
    <string name="menu_refresh">Refrescar lista</string>

</resources>