<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <!--https://github.com/hdodenhof/CircleImageView-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="8dp"
        android:src="@drawable/ic_android_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_user"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
        app:layout_constraintTop_toTopOf="@+id/imageViewAvatar" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:text="@string/tv_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewFechaCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUsername"
        app:layout_constraintEnd_toEndOf="@+id/textViewMessage"
        app:layout_constraintTop_toTopOf="@+id/textViewUsername" />

    <ImageView
        android:id="@+id/imageViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/cont_desc_btn_edit"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDelete"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDelete"
        app:layout_constraintTop_toTopOf="@+id/imageViewDelete"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@android:color/holo_green_dark" />

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cont_desc_btn_delete"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/textViewMessage"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@android:color/holo_red_dark" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="16dp"
        android:background="#DDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>