<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewRadioImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/cont_desc_radio"
        android:padding="8dp"
        android:src="@drawable/ic_android_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tv_radio"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/imageViewRadioImg"
        app:layout_constraintTop_toTopOf="@+id/imageViewRadioImg" />

    <TextView
        android:id="@+id/textViewCentro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_centre"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRadioImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewRadio" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#DDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRadioImg" />
</androidx.constraintlayout.widget.ConstraintLayout>